Add a help flag to genSrc.sh. Separate compilation.